# silk

./: .gitignore  README.md
backend/: pyproject.toml
docs/: Документ Microsoft Word.docx  тз.docx
frontend/: index.html  refactor.md
frontend/css/: style.css
frontend/js/: script.js
frontend/style/: style.css
frontend/views/: about_us.html  contacts.html  news.html  products copy 2.html  products copy.html  products.html  uslugs.html
