[tool.poetry]
name = "clothing store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false 


[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.7"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C", "UP"]  # Основные правила
ignore = ["E501"]  # Игнорировать длину строки (если конфликтует с Black)
target-version = "py310"

[tool.ruff.format]  # Если используете Ruff также для форматирования (аналог Black)
docstring-code-format = true